--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,15 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao' // apply plugin
+
+greendao {
+    schemaVersion 1 //数据库版本号
+    daoPackage 'com.example.taobaou.dao'
+// 设置DaoMaster、DaoSession、Dao 包名
+    targetGenDir 'src/main/java'//设置DaoMaster、DaoSession、Dao目录
+    generateTests false //设置为true以自动生成单元测试。
+    targetGenDirTests 'src/main/java' //应存储生成的单元测试的基本目录。默认为 src / androidTest / java。
+}
+
 
 android {
     compileSdkVersion 29
@@ -57,5 +68,6 @@ dependencies {
     implementation 'com.joker.HuanTanSheng:EasyPhotos:2.5.1'
     //通信
     implementation 'org.greenrobot:eventbus:3.2.0'
+
 
 }
