--- a/facelibs/build.gradle
+++ b/facelibs/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    //face
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
