--- a/facelibs/build.gradle
+++ b/facelibs/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    //通信
+    implementation 'org.greenrobot:eventbus:3.2.0'
 }
