--- a/facelibs/src/main/AndroidManifest.xml
+++ b/facelibs/src/main/AndroidManifest.xml
@@ -8,48 +8,48 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name="com.example.facelibs.activity.FaceAttrPreviewActivity"
-            android:launchMode="singleTop" />
-        <activity
-            android:name="com.example.facelibs.activity.ChooseFunctionActivity"
-            android:launchMode="singleTop">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--    <application-->
+<!--        android:allowBackup="true"-->
+<!--        android:icon="@mipmap/ic_launcher"-->
+<!--        android:label="@string/app_name"-->
+<!--        android:supportsRtl="true"-->
+<!--        android:theme="@style/AppTheme">-->
+<!--        <activity-->
+<!--            android:name="com.example.facelibs.activity.FaceAttrPreviewActivity"-->
+<!--            android:launchMode="singleTop" />-->
+<!--        <activity-->
+<!--            android:name="com.example.facelibs.activity.ChooseFunctionActivity"-->
+<!--            android:launchMode="singleTop">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
 
-        <activity
-            android:name="com.example.facelibs.activity.SingleImageActivity"
-            android:configChanges="orientation|screenSize"
-            android:launchMode="singleTop" />
+<!--        <activity-->
+<!--            android:name="com.example.facelibs.activity.SingleImageActivity"-->
+<!--            android:configChanges="orientation|screenSize"-->
+<!--            android:launchMode="singleTop" />-->
 
-        <activity
-            android:name="com.example.facelibs.activity.MultiImageActivity"
-            android:launchMode="singleTop" />
+<!--        <activity-->
+<!--            android:name="com.example.facelibs.activity.MultiImageActivity"-->
+<!--            android:launchMode="singleTop" />-->
 
-        <activity
-            android:name="com.example.facelibs.activity.IrRegisterAndRecognizeActivity"
-            android:launchMode="singleTop" />
+<!--        <activity-->
+<!--            android:name="com.example.facelibs.activity.IrRegisterAndRecognizeActivity"-->
+<!--            android:launchMode="singleTop" />-->
 
-        <activity
-            android:name="com.example.facelibs.activity.RegisterAndRecognizeActivity"
-            android:launchMode="singleTop" />
+<!--        <activity-->
+<!--            android:name="com.example.facelibs.activity.RegisterAndRecognizeActivity"-->
+<!--            android:launchMode="singleTop" />-->
 
-        <activity
-            android:name="com.example.facelibs.activity.FaceManageActivity"
-            android:launchMode="singleTop" />
+<!--        <activity-->
+<!--            android:name="com.example.facelibs.activity.FaceManageActivity"-->
+<!--            android:launchMode="singleTop" />-->
 
 
 
-    </application>
+<!--    </application>-->
 
 </manifest>
