--- a/facelibs/build.gradle
+++ b/facelibs/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     //通信
     implementation 'org.greenrobot:eventbus:3.2.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.3'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
 }
