--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation project(path: ':baidusearch')
     implementation project(path: ':facelibs')
+    implementation project(path: ':baselib')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -67,8 +68,11 @@ dependencies {
     //通信
     implementation 'org.greenrobot:eventbus:3.2.0'
 
-    //face
+    //rx
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+
+    // 弹窗
+    implementation 'com.lxj:xpopup:2.1.3'
 
 }
