--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,6 @@ dependencies {
     implementation 'com.lxj:xpopup:2.1.3'
     implementation 'me.jessyan:autosize:1.2.1'
 
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
 }
