--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,19 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        manifestPlaceholders = [
+                //从 3.1.2.0 版本开始，APPID 占位符从 GETUI_APP_ID 切换为 GETUI_APPID
+                //后续所有产品的 APPID 均统一配置为 GETUI_APPID 占位符
+                GETUI_APPID       : "py079fgM0v9UmLJXwHVkI5",
+
+                //渠道若为纯数字则不能超过 int 表示的范围。
+                GT_INSTALL_CHANNEL      : "your channel"
+        ]
+
+        ndk {
+            // 添加项目所需 CPU 类型的最小集
+            abiFilters "armeabi", "armeabi-v7a", "x86_64", "x86"
+        }
 
     }
 
@@ -77,5 +90,8 @@ dependencies {
     implementation 'me.jessyan:autosize:1.2.1'
 
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
+    implementation 'com.getui:gtsdk:3.1.4.0'  //个推SDK
+    implementation 'com.getui:gtc:3.1.0.0'  //个推核心组件
 
 }
