--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <application
         android:name=".base.BaseApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_logo"
+        android:icon="@mipmap/icon_taobaou_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:usesCleartextTraffic="true"
@@ -32,17 +32,14 @@
         <activity android:name=".ui.activity.LoginActivity" />
         <activity android:name=".ui.activity.face.FaceRegisetrActivity" />
         <activity android:name=".ui.activity.MainActivity">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <action android:name="android.intent.action.VIEW" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
         </activity>
         <activity android:name=".ui.activity.ShowImageActivity"/>
         <activity
             android:name=".ui.activity.TicketActivity"
             android:launchMode="singleTop" />
+        <service
+            android:name=".service.GetuiIntentService"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
 
         <meta-data
             android:name="design_width_in_dp"
