--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ allprojects {
         maven {
             url "http://maven.aliyun.com/nexus/content/groups/public/"
         }
+        maven {
+            url "http://mvn.gt.getui.com/nexus/content/repositories/releases/"
+        }
 
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven{ url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
